objects/yk_loginflow__yubikeysettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>yk_loginflow__allowUsersWithoutYubikeys__c</fullName>
        <defaultValue>true</defaultValue>
        <label>allowUsersWithoutYubikeys</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>yk_loginflow__applicationId__c</fullName>
        <label>applicationId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>yk_loginflow__applicationKey__c</fullName>
        <label>applicationKey</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>yk_loginflow__eulaAccepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>eulaAccepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>yk_loginflow__gettingStartedDismissed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>gettingStartedDismissed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>yk_loginflow__packageEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>packageEnabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>yk_loginflow__skipForTrustedNetwork__c</fullName>
        <defaultValue>true</defaultValue>
        <label>skipForTrustedNetwork</label>
        <type>Checkbox</type>
    </fields>
    <label>yubikeysettings</label>
</CustomObject>